@@ -1004,6 +1004,9 @@ ReadConfig (
               ReadConfig (TokenList[1]);
            }
         }
+        else if (MyStriCmp (TokenList[0], L"write_systemd_vars")) {
+           GlobalConfig.WriteSystemdVars = HandleBoolean (TokenList, TokenCount);
+        }
         else if (MyStriCmp (TokenList[0], L"enable_mouse")) {
            GlobalConfig.EnableMouse = HandleBoolean (TokenList, TokenCount);
            if (GlobalConfig.EnableMouse) {
